--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
       <footer class="container"> 
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p>Margarita &#169; 2022  <a href="#">Privacy</a> <a href="#">Terms</a></p>
+        <p>Kelly &#169; 2024  <a href="#">Privacy</a> <a href="#">Terms</a></p>
       </footer>
 
       
